feat: scaffold user repo/service, add testcontainers integration test, improve devcontainer for testcontainers-go

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -2,7 +2,9 @@
   "name": "Inbox Whisperer Development",
   "dockerFile": "Dockerfile",
   "context": "..",
-  "features": {},
+  "features": {
+    "ghcr.io/devcontainers/features/docker-in-docker:2": {}
+  },
   "runArgs": [
     "-v", "/var/run/docker.sock:/var/run/docker.sock"
   ],
