--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -2,12 +2,14 @@
   "name": "Inbox Whisperer Development",
   "dockerFile": "Dockerfile",
   "context": "..",
-  "features": {
-    "ghcr.io/devcontainers/features/docker-in-docker:2": {}
-  },
-  "runArgs": [
-    "-v", "/var/run/docker.sock:/var/run/docker.sock"
+  "mounts": [
+    "source=/var/run/docker.sock,target=/var/run/docker.sock,type=bind"
   ],
+  "env": {
+    "TESTCONTAINERS_RYUK_DISABLED": "true",
+    "TESTCONTAINERS_CHECKS_DISABLE": "true",
+    "TESTCONTAINERS_DEBUG": "true"
+  },
   "customizations": {
     "vscode": {
       "settings": {
