chore: remove UI targets, clean Makefile and CI for backend-only Go project

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,22 +39,19 @@ jobs:
         run: make test
 
       - name: Vet
-        run: go vet ./...
+        run: make vet
+
+      - name: Staticcheck
+        run: make staticcheck
+
+      - name: Tidy
+        run: make tidy
 
       - name: Build
         run: go build ./...
 
-  frontend:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-
-      - name: Set up Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: '20'
-
+      - name: Clean
+        run: make clean
       - name: Install dependencies
         run: make ui-install
 
