--- a/.gitignore
+++ b/.gitignore
@@ -39,6 +39,27 @@ htmlcov/
 .nox/
 .coverage
 .coverage.*
+
+# Node & React
+node_modules/
+build/
+dist/
+.env
+.env.*
+.DS_Store
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Font cache/temp
+web/public/fonts/*.woff
+web/public/fonts/*.woff2
+web/public/fonts/*.ttf
+
+# Local dev
+*.local
+*.swp
+
 .cache
 nosetests.xml
 coverage.xml
