docs: update Jest config, CSS import, and testing best practices after fixing test failures

--- a/web/tsconfig.app.json
+++ b/web/tsconfig.app.json
@@ -1,5 +1,7 @@
 {
   "compilerOptions": {
+    "esModuleInterop": true,
+    "jsx": "react-jsx",
     "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.app.tsbuildinfo",
     "target": "ES2020",
     "useDefineForClassFields": true,
