--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,18 +7,19 @@ on:
     branches: [main]
 
 jobs:
-  build-test-lint:
+  setup:
     runs-on: ubuntu-latest
+    outputs:
+      go-cache: ${{ steps.go-cache.outputs.cache-hit }}
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
-
       - name: Set up Go
         uses: actions/setup-go@v4
         with:
-          go-version: '1.21'
-
+          go-version: '1.24.2'
       - name: Cache Go modules
+        id: go-cache
         uses: actions/cache@v3
         with:
           path: |
@@ -27,40 +28,110 @@ jobs:
           key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
           restore-keys: |
             ${{ runner.os }}-go-
-
       - name: Install golangci-lint
         run: |
-          curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s -- -b $(go env GOPATH)/bin v1.55.2
+          curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s -- -b $(go env GOPATH)/bin v1.64.8
+      - name: Install staticcheck
+        run: |
+          curl -sSfL https://github.com/dominikh/go-tools/releases/download/2025.1.1/staticcheck_2025.1.1_linux_amd64.tar.gz | tar -xz -C /tmp
+          sudo mv /tmp/staticcheck/staticcheck /usr/local/bin/staticcheck
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '22.14.0'
+          cache: 'npm'
+      - name: Pin npm version
+        run: npm install -g npm@11.3.0
+      - name: Install migrate
+        run: |
+          curl -L https://github.com/golang-migrate/migrate/releases/download/v4.18.2/migrate.linux-amd64.tar.gz | tar xvz
+          sudo mv migrate.linux-amd64 /usr/local/bin/migrate
 
+  backend-lint:
+    runs-on: ubuntu-latest
+    needs: setup
+    steps:
+      - uses: actions/checkout@v3
       - name: Lint
         run: make lint
 
+  backend-test:
+    runs-on: ubuntu-latest
+    needs: setup
+    steps:
+      - uses: actions/checkout@v3
       - name: Test
         run: make test
 
+  backend-vet:
+    runs-on: ubuntu-latest
+    needs: setup
+    steps:
+      - uses: actions/checkout@v3
       - name: Vet
         run: make vet
 
+  backend-staticcheck:
+    runs-on: ubuntu-latest
+    needs: setup
+    steps:
+      - uses: actions/checkout@v3
       - name: Staticcheck
         run: make staticcheck
 
+  backend-tidy:
+    runs-on: ubuntu-latest
+    needs: setup
+    steps:
+      - uses: actions/checkout@v3
       - name: Tidy
         run: make tidy
 
+  backend-build:
+    runs-on: ubuntu-latest
+    needs: setup
+    steps:
+      - uses: actions/checkout@v3
       - name: Build
         run: go build ./...
 
+  backend-clean:
+    runs-on: ubuntu-latest
+    needs: setup
+    steps:
+      - uses: actions/checkout@v3
       - name: Clean
         run: make clean
+
+  frontend-install:
+    runs-on: ubuntu-latest
+    needs: setup
+    steps:
+      - uses: actions/checkout@v3
       - name: Install dependencies
         run: make ui-install
 
+  frontend-lint:
+    runs-on: ubuntu-latest
+    needs: frontend-install
+    steps:
+      - uses: actions/checkout@v3
       - name: Lint frontend
         run: make ui-lint
 
+  frontend-test:
+    runs-on: ubuntu-latest
+    needs: frontend-install
+    steps:
+      - uses: actions/checkout@v3
       - name: Test frontend
         run: make ui-test
 
+  frontend-build:
+    runs-on: ubuntu-latest
+    needs: frontend-install
+    steps:
+      - uses: actions/checkout@v3
       - name: Build frontend
         run: make ui-build
 
