--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,7 +33,7 @@ jobs:
           curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s -- -b $(go env GOPATH)/bin v1.64.8
       - name: Install staticcheck
         run: |
-          curl -sSfL https://github.com/dominikh/go-tools/releases/download/2025.1.1/staticcheck_2025.1.1_linux_amd64.tar.gz | tar -xz -C /tmp
+          curl -sSfL https://github.com/dominikh/go-tools/releases/download/2025.1.1/staticcheck_linux_amd64.tar.gz | tar -xz -C /tmp
           sudo mv /tmp/staticcheck/staticcheck /usr/local/bin/staticcheck
       - name: Set up Node.js
         uses: actions/setup-node@v4
