--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -53,6 +53,10 @@ jobs:
     needs: setup
     steps:
       - uses: actions/checkout@v3
+      - name: Install golangci-lint
+        run: |
+          curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s -- -b . v1.64.8
+          sudo mv golangci-lint /usr/local/bin/golangci-lint
       - name: Lint
         run: make lint
 
@@ -77,6 +81,10 @@ jobs:
     needs: setup
     steps:
       - uses: actions/checkout@v3
+      - name: Install staticcheck
+        run: |
+          curl -sSfL https://github.com/dominikh/go-tools/releases/download/2025.1.1/staticcheck_linux_amd64.tar.gz | tar -xz -C /tmp
+          sudo mv /tmp/staticcheck/staticcheck /usr/local/bin/staticcheck
       - name: Staticcheck
         run: make staticcheck
 
