--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -127,6 +127,8 @@ jobs:
       - uses: actions/checkout@v3
       - name: Install dependencies
         run: npm ci --prefix web
+      - name: Check formatting (Prettier)
+        run: make ui-fmt
       - name: Lint frontend
         run: make ui-lint
 
