--- a/cmd/backend/Dockerfile
+++ b/cmd/backend/Dockerfile
@@ -1,15 +1,14 @@
 # Backend Dockerfile
-FROM golang:1.21-alpine as build
+FROM golang:1.24.2 as build
 WORKDIR /app
 COPY go.mod go.sum ./
 RUN go mod download
 COPY . .
-RUN CGO_ENABLED=0 go build -o inboxwhisperer ./cmd/backend
+RUN CGO_ENABLED=0 go build -o inboxwhisperer ./cmd/server
 
-FROM alpine:latest
+FROM alpine:3.19
 WORKDIR /app
 COPY --from=build /app/inboxwhisperer ./inboxwhisperer
-COPY config.json.template ./config.json
 COPY migrations ./migrations
 EXPOSE 8080
 CMD ["./inboxwhisperer"]
