--- a/web/Dockerfile
+++ b/web/Dockerfile
@@ -1,12 +1,12 @@
 # Frontend Dockerfile
-FROM node:20-alpine as build
+FROM node:21-alpine3.19 as build
 WORKDIR /app
 COPY package*.json ./
 RUN npm install
 COPY . .
 RUN npm run build
 
-FROM nginx:alpine
+FROM nginx:1.25-alpine
 COPY --from=build /app/dist /usr/share/nginx/html
 EXPOSE 3000
 CMD ["nginx", "-g", "daemon off;"]
