--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -3,7 +3,8 @@
   "dockerFile": "Dockerfile",
   "context": "..",
   "mounts": [
-    "source=/var/run/docker.sock,target=/var/run/docker.sock,type=bind"
+    "source=/var/run/docker.sock,target=/var/run/docker.sock,type=bind",
+    "source=${localWorkspaceFolder}/shared,target=/workspace/shared,type=bind,consistency=cached"
   ],
   "remoteEnv": {
     "DOCKER_BUILDKIT": "1",
