--- a/cmd/backend/Dockerfile
+++ b/cmd/backend/Dockerfile
@@ -14,8 +14,11 @@ RUN CGO_ENABLED=0 go build -o inboxwhisperer ./cmd/server
 # Use latest Alpine as of April 2025
 FROM alpine:3.19.1
 WORKDIR /app
+RUN apk add --no-cache postgresql-client
 COPY --from=build /app/inboxwhisperer ./inboxwhisperer
 COPY migrations ./migrations
+COPY ../scripts/wait-for-db.sh ./wait-for-db.sh
+RUN chmod +x ./wait-for-db.sh
 EXPOSE 8080
 # Add labels for best practices
 LABEL org.opencontainers.image.source="https://github.com/desponda/inbox-whisperer"
@@ -23,4 +26,4 @@ LABEL org.opencontainers.image.description="Inbox Whisperer backend service"
 
 HEALTHCHECK --interval=10s --timeout=3s --start-period=5s CMD wget -q --spider http://localhost:8080/health || exit 1
 
-CMD ["./inboxwhisperer"]
+CMD ["/bin/sh", "-c", "./wait-for-db.sh db 5432 && ./inboxwhisperer"]
