--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,6 +7,15 @@ on:
     branches: [main]
 
 jobs:
+  docs-lint:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - name: Lint markdown docs
+        uses: DavidAnson/markdownlint-cli2-action@v15
+        with:
+          globs: docs/**/*.md
+
   setup:
     runs-on: ubuntu-latest
     outputs:
@@ -161,7 +170,6 @@ jobs:
         with:
           types: feat,fix,chore,docs,refactor,style,test,perf,build,ci
           requireScope: false
-          requireTicketNumber: false
           subjectPattern: ".+"
           wip: false
         env:
