--- a/config.json.template
+++ b/config.json.template
@@ -12,7 +12,7 @@
     "redirect_url": "http://localhost:8080/api/auth/callback"
   },
   "server": {
-    "port": 8080,
+    "port": "8080",
     "frontend_url": "http://localhost:3000"
   }
 }
