--- a/web/package.json
+++ b/web/package.json
@@ -26,6 +26,8 @@
   "devDependencies": {
     "@eslint/js": "^9.25.1",
     "@openapitools/openapi-generator-cli": "^2.19.1",
+    "@swc/core": "^1.11.22",
+    "@swc/jest": "^0.2.38",
     "@tailwindcss/postcss": "^4.1.4",
     "@tailwindcss/vite": "^4.1.4",
     "@testing-library/jest-dom": "^6.6.3",
